# ttags

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flake.nix
.github/workflows/: release.yml  tests.yml
d/: tags.scm
haskell/: tags.scm
javascript/: tags.scm
nix/: tags.scm
ruby/: delegate.scm  tags.scm
rust/: tags.scm
src/: c.rs  cli.rs  config.rs  cpp.rs  d.rs  generate.rs  haskell.rs  javascript.rs  lib.rs  lsp.rs  main.rs  nix.rs  ruby.rs  rust.rs  swift.rs  tag.rs  tagger.rs
swift/: tags.scm
