[package]
name = "ttags"
version = "0.4.3"
authors = ["Nick Pezza <pezza@hey.com>"]
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/npezza93/ttags"
description = "Generate ctags using Tree Sitter"

[[bin]]
name = "ttags"
path = "src/main.rs"

[dependencies]
tree-sitter = ">=0.20"
npezza93_tree-sitter-tags = ">=0.21.2"
tree-sitter-d = ">=0.8.2"
tree-sitter-javascript = ">=0.20"
tree-sitter-ruby = ">=0.20"
tree-sitter-rust = ">=0.20"
tree-sitter-haskell = ">=0.21"
tree-sitter-nix = "0.0.2"
Inflector = "^0.11"
pathdiff = "^0.2.1"
sugar_path = "^0.0.9"
walkdir = "^2.3.2"
rayon = "^1.6.1"
lsp-server = "^0.7.0"
serde_json = "^1.0.94"
lsp-types = "^0.94.0"
tree-sitter-swift = "^0.6.0"
regex = "^1.10"
streaming-iterator = "0.1.9"
tree-sitter-language = "0.1.0"

[build-dependencies]
clap="^2.31.2"

[dependencies.clap]
version = "^2.31.2"
default-features = false
features = [ "suggestions", "color" ]
